# FastFoodSimulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py
app/api/: main.py  routes.py
app/settings/: api_settings.py
src/: __main__.py
src/api/: dependencies.py  main.py  publisher.py  routes.py
src/contracts/: simulation.py
src/infrastructure/redis/: lifecycle.py  provider.py  simulation_state_repository.py
src/settings/: api_settings.py
src/static/css/: home.css
src/static/js/: home.js  simulation_1488.js
src/templates/: home.html  index.html  simulation.html  simulation_1488.html
src/workers/: basic_handler.py
src/workers/cashier_worker/: __main__.py  handler.py
src/workers/client_generator_worker/: __main__.py  handler.py
src/workers/kitchen_worker/: __main__.py  handler.py
