[project]
name = "fastfoodsimulator"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.43.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D104"]